After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656619 - Some modal dialog fixes
Some modal dialog fixes
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2011-08-16 05:25 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2011-08-29 17:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Account for invisible borders when constraining modal dialogs (1.50 KB, patch)
2011-08-16 05:25 UTC, Jasper St. Pierre (not reading bugmail)
needs-work Details | Review
Half invisible borders for modal dialogs (8.40 KB, patch)
2011-08-16 05:25 UTC, Jasper St. Pierre (not reading bugmail)
rejected Details | Review
Disable top resizing for attached modal dialogs (1.37 KB, patch)
2011-08-16 05:25 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
Account for invisible borders when constraining modal dialogs (817 bytes, patch)
2011-08-29 16:53 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2011-08-16 05:25:37 UTC
These patches make the appearance and behavior of modal dialogs a bit better.
Comment 1 Jasper St. Pierre (not reading bugmail) 2011-08-16 05:25:39 UTC
Created attachment 193906 [details] [review]
Account for invisible borders when constraining modal dialogs
Comment 2 Jasper St. Pierre (not reading bugmail) 2011-08-16 05:25:42 UTC
Created attachment 193907 [details] [review]
Half invisible borders for modal dialogs
Comment 3 Jasper St. Pierre (not reading bugmail) 2011-08-16 05:25:45 UTC
Created attachment 193908 [details] [review]
Disable top resizing for attached modal dialogs
Comment 4 Owen Taylor 2011-08-29 14:46:40 UTC
Review of attachment 193906 [details] [review]:

Hmm, first fix seems right, other two changes I'm not so sure about

::: src/core/constraints.c
@@ +769,1 @@
+      y += info->borders->visible.top + info->borders->invisible.top;

This seems wrong, we want to place the top of the visible frame at the bottom of the parent dialog, right, not the top of the invisible frame?

::: src/core/place.c
@@ +793,3 @@
           /* put top of child's frame, not top of child's client */
           if (borders)
+            y += borders->visible.top + borders->invisible.top;

This seems wrong - we want to place the top of the visible frame, not the top of the invisible frame.
Comment 5 Owen Taylor 2011-08-29 14:48:48 UTC
Review of attachment 193908 [details] [review]:

Seems sensible
Comment 6 Owen Taylor 2011-08-29 14:51:43 UTC
Review of attachment 193907 [details] [review]:

Was this a designer request? What's the rationale? (Commit message should mention the meta_theme_draw_frame_by_name() deletion as unused and why it was done as part of this patch)
Comment 7 Jasper St. Pierre (not reading bugmail) 2011-08-29 16:53:08 UTC
Created attachment 195091 [details] [review]
Account for invisible borders when constraining modal dialogs
Comment 8 Jasper St. Pierre (not reading bugmail) 2011-08-29 17:04:17 UTC
Comment on attachment 193908 [details] [review]
Disable top resizing for attached modal dialogs

Attachment 193908 [details] pushed as e4da649 - Disable top resizing for attached modal dialogs
Comment 9 Owen Taylor 2011-08-29 17:25:31 UTC
Review of attachment 195091 [details] [review]:

Looks good
Comment 10 Owen Taylor 2011-08-29 17:28:42 UTC
Review of attachment 193907 [details] [review]:

<owen> [...] you wouldn't really notice unless you are trying to grab the border, and then having the bigger border is definitely good then
<owen> magcius: I think I'm going to say let's just use the full width and avoid some artificial /2 in the code unless we have a request from the designers otherwise
Comment 11 Jasper St. Pierre (not reading bugmail) 2011-08-29 17:28:57 UTC
Attachment 195091 [details] pushed as 05fee9b - Account for invisible borders when constraining modal dialogs