Account for invisible borders when constraining modal dialogs

https://bugzilla.gnome.org/show_bug.cgi?id=656619